workloads/apps/n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      enableServiceLinks: false
      nodeSelector:
        node.longhorn.io/create-default-disk: "true"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      # initContainers:
      #   - name: init-n8n-permissions
      #     image: busybox:1.36
      #     command:
      #       - sh
      #       - -c
      #       - mkdir -p /home/node/.n8n && chown -R 1000:1000 /home/node/.n8n
      #     securityContext:
      #       runAsUser: 0
      #       runAsGroup: 0
      #     volumeMounts:
      #       - name: n8n-data
      #         mountPath: /home/node/.n8n
      containers:
        - name: n8n
          image: n8nio/n8n:2.43.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5678
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-pvc
